# mentor_whirlpool_subject_gathering

./: LICENSE  setup.cfg
mentor_whirlpool_subject_gathering/: __main__.py  encouragements.txt
