[metadata]
name = mentor_whirlpool_subjects_gathering_zinstack625
version = 0.0.1
author = Anton Klimanov (zinstack625)
author_email = klimanov625@outlook.com
description = Subject gathering for Mentor Whirlpool telegram bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mentor-Whirlpool/mentor_whirlpool_subject_gathering
project_urls =
    Bug Tracker = https://github.com/Mentor-Whirlpool/mentor_whirlpool_subject_gathering/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    mentor_whirlpool_subject_gathering
python_requires = >=3.6

[options.package_data]
mentor_whirlpool_subject_gathering =
    encouragements.txt
